# icedragon-api

./: Cargo.toml  README.md  pyproject.toml
app/: api.py
src/: main.rs
src/icedragon_api/holidays/: __init__.py
tests/: test_holidays.py
