[project]
name = "icedragon-api"
version = "0.1.0"
description = "icedragon personal api"
authors = [
    {name = "icedragon", email = "flyingicedragon@qq.com"},
]
dependencies = [
    "holidays==0.58",
    "fastapi[standard]>=0.115.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "GPL-3.0-or-later"}


[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
test = [
    "pytest>=8.3.3",
]

[tool.pdm.scripts]
dev = {cmd = [
    "fastapi",
    "dev"
]}
run = {cmd = [
    "fastapi",
    "run",
    "--host", "127.0.0.1",
    "--port", "8015"
]}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
